; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wimax/i2400m/extr_rx.c___i2400m_roq_index.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wimax/i2400m/extr_rx.c___i2400m_roq_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2400m = type { i64 }
%struct.i2400m_roq = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2400m*, %struct.i2400m_roq*)* @__i2400m_roq_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__i2400m_roq_index(%struct.i2400m* %0, %struct.i2400m_roq* %1) #0 {
  %3 = alloca %struct.i2400m*, align 8
  %4 = alloca %struct.i2400m_roq*, align 8
  store %struct.i2400m* %0, %struct.i2400m** %3, align 8
  store %struct.i2400m_roq* %1, %struct.i2400m_roq** %4, align 8
  %5 = load %struct.i2400m_roq*, %struct.i2400m_roq** %4, align 8
  %6 = ptrtoint %struct.i2400m_roq* %5 to i64
  %7 = load %struct.i2400m*, %struct.i2400m** %3, align 8
  %8 = getelementptr inbounds %struct.i2400m, %struct.i2400m* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = sub i64 %6, %9
  %11 = udiv i64 %10, 4
  %12 = trunc i64 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
